<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.CricketerFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_qs_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/who_is_the_best_cricketer_in_the_world_noptions"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/rdo_ans_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rdo_ans_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rd_ans_two_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_sachin_tendulkar" />

        <RadioButton
            android:id="@+id/rd_ans_two_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_virat_kolli" />

        <RadioButton
            android:id="@+id/rd_ans_two_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_adam_gilchirst" />

        <RadioButton
            android:id="@+id/rd_ans_two_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d_jacques_kallis" />


    </RadioGroup>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/select_any_one"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdo_ans_two" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#4300CD"
        android:text="@string/next_button"
        android:textSize="16sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>