<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.ColorFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_qs_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/what_are_the_colors_in_the_indian_national_flag_select_all_options"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_white_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <CheckBox
        android:id="@+id/checkBox_white_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/a_white"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_yellow_three"
        app:layout_constraintStart_toStartOf="@+id/checkBox_yellow_three"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox_yellow_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/b_yellow"
        app:layout_constraintBottom_toTopOf="@+id/checkBox_green_three"
        app:layout_constraintStart_toStartOf="@+id/checkBox_green_three"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox_orange_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/c_orange"
        app:layout_constraintStart_toStartOf="@+id/checkBox_green_three"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_green_three"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox_green_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/select_more_than_1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/checkBox_orange_three"
        app:layout_constraintStart_toStartOf="@+id/checkBox_orange_three"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_orange_three" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#4300CD"
        android:text="@string/next_button"
        android:textSize="16sp"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>